# fakexrandr-background

./: .gitignore  README.md  fakexrandr_background.spec  main.py  pyinstaller.spec  pyproject.toml
.github/workflows/: build-release.yml
fakexrandr_background/: gsetting_actions.py  icon.py  main.py  picture_utils.py  screen.py
icon/: fakexrandr_background.ai
