[tool.poetry]
name = "fakexrandr-background"
version = "1.0.1"
description = "Background slideshow for fakexrandr"
authors = ["Alwin Schuster"]
homepage = "https://alwinschuster.at"
repository = "https://github.com/Alwinator/fakexrandr-background"
documentation = "https://github.com/Alwinator/fakexrandr-background"

[tool.poetry.dependencies]
python = "^3.9"
opencv-python-headless = "^4.5.3.56"
PyQt5 = "^5.15.4"

[tool.poetry.dev-dependencies]
pyinstaller = "^4.5.1"
