[tool.poetry]
name = "fakexrandr-background"
version = "1.0.3"
description = "Background slideshow for fakexrandr"
authors = ["Alwin Schuster"]
homepage = "https://alwinschuster.at"
repository = "https://github.com/Alwinator/fakexrandr-background"
documentation = "https://github.com/Alwinator/fakexrandr-background"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
opencv-python-headless = "^4.5.5.64"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.13.1"
